[package]
name = "dns-ear"
version = "0.1.0"
authors = ["Evgeny Soynov <saboteur@saboteur.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
log = "0.4"
tokio = { version = "1.0", features = ["time"] }
trust-dns-proto = "0.20.0"
regex = "1.4.3"
lazy_static = "1.4.0"
chrono = "0.4"

[dependencies.trust-dns-server]
version = "0.20.0"
# default-features = false
